# mkDoku.github.io

./: .gitignore  LICENSE  README.md  about.html  about.markdown  blog.html  contact.html  contact.markdown  default.nix  index.html  mkDokuBlog.cabal  site.hs  stack.yaml
.github/workflows/: build-delploy.yml
css/: default.css
posts/: 2020-12-23-reanimate-01.html  2020-12-23-reanimate-01.markdown  2021-01-31-reanimate-02.html  2021-01-31-reanimate-02.markdown  2021-06-19-molecular-dynamics.html  2021-06-19-molecular-dynamics.markdown
posts/wip/: 2023-03-29-chords-guessing-game-elm.markdown
tags/: Animation.html  Gloss.html  Haskell.html  Reanimate.html  Simulation.html
templates/: default.html  post.html
