name:                mkDokuBlog
version:             0.1.0.0
build-type:          Simple
license:             BSD3
license-file:        LICENSE
author:              Sascha Bubeck
maintainer:          bubecksascha@t-online.de
copyright:           2024 Sascha Bubeck
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , containers
                  , pandoc
                  , pandoc-types
                  , text
                  , blaze-html
  default-language: Haskell2010
